--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,12 +1,12 @@
 # Oracle Local Properties
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-#spring.datasource.username=employee_db
-#spring.datasource.password=employee_db!!
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
+spring.datasource.username=employee_db
+spring.datasource.password=employee_db!!
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
@@ -21,34 +21,28 @@
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
-# MySQL Docker Properties
-#spring.datasource.url=jdbc:mysql://mysqldb-empdb:3308/employee_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
-#spring.datasource.username=employee
-#spring.datasource.password=employee
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.sql.init.mode=always
-#spring.datasource.initialization-mode=always
+#Rabbitmq Configurations
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Eureka configurations
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.instance.hostname=localhost
+
+# Zipkin configurations
+spring.zipkin.base-url=http://127.0.0.1:9411/
+spring.sleuth.sampler.probability=1.0
 
 server.port=8081
 
-# Localhost Property
-#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+management.endpoints.web.exposure.include=*
 
-# Docker Property
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
-
-# Localhost Property
-#eureka.instance.hostname=localhost
-
-# Docker Property
-eureka.instance.hostname=service-registry
+spring.boot.message = Hello, Employee Service Spring Cloud BUS DEMO3
 
 #eureka.instance.prefer-ip-address=true
 #eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #eureka.instance.hostname=${spring.cloud.client.ip-address}
-
-spring.boot.message = Hello, Employee Service Spring Cloud BUS DEMO3
