--- a/organization-service.properties
+++ b/organization-service.properties
@@ -11,13 +11,13 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.initialization-mode=always
 
 # MySQL Local Properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/organization_db?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/organization_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 #spring.sql.init.mode=always
 #spring.datasource.initialization-mode=always
 
