--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,57 +1,37 @@
-# Oracle Local Properties
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:mydb
-#spring.datasource.username=organization_db
-#spring.datasource.password=organization_db!!
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.sql.init.mode=always
-#spring.datasource.initialization-mode=always
-
-# MySQL Local Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/organization_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-#spring.sql.init.mode=always
-#spring.datasource.initialization-mode=always
-
-#Rabbitmq Configurations
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-
-# Eureka configurations
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.instance.hostname=localhost
-
-# Kafka Properties
-organization.topic.name=organization_notification_topic
-organization.topic.group.id=organization_notification_group_id
-
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.properties.spring.json.type.mapping=event:net.javaguides.organizationservice.notification.OrganizationCreateEvent
-
-# Zipkin configurations
-spring.zipkin.base-url=http://127.0.0.1:9411/
-spring.sleuth.sampler.probability=1.0
-
-server.port=8083
-
 management.endpoints.web.exposure.include=*
 
-spring.boot.message = Hello, Organization Service Spring Cloud BUS DEMO2
+## Routes for Employee Service
+spring.cloud.gateway.routes[0].id=EMPLOYEE-SERVICE
+spring.cloud.gateway.routes[0].uri=lb://EMPLOYEE-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
 
-#eureka.instance.prefer-ip-address=true
-#eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
-#eureka.instance.hostname=${spring.cloud.client.ip-address}
+## Routes for Department Service
+spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
+spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
+
+## Routes for Organization Service
+spring.cloud.gateway.routes[2].id=ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].uri=lb://ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
+
+## Discover Server Static Resources Route
+spring.cloud.gateway.routes[3].id=service-registry-static
+spring.cloud.gateway.routes[3].uri=http://service-registry:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+
+## Routes for Security Service
+spring.cloud.gateway.routes[4].id=SECURITY-SERVICE
+spring.cloud.gateway.routes[4].uri=lb://SECURITY-SERVICE
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/security/**
+
+spring.zipkin.base-url=http://zipkin:9411/
+spring.sleuth.sampler.probability=1.0
+
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8099/realms/employee-management-realm-new
